@@ -1,3 +1,8 @@
+2006-10-25  Steve Ellcey  <sje@cup.hp.com>
+
+	* config/ia64/hpux.h: Define _INCLUDE__STDC_A1_SOURCE in C++.
+	Add unix98.o to link line.
+
 2006-10-25  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	PR middle-end/29335
